// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter override custom filter correctly 1`] = `
<div
  className="ant-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setSelectedKeys"
    onClick={[Function]}
  >
    setSelectedKeys
  </span>
  <span
    id="confirm"
    onClick={[Function]}
  >
    Confirm
  </span>
  <span
    id="reset"
    onClick={[Function]}
  >
    Reset
  </span>
</div>
`;

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div
    class="ant-dropdown  ant-dropdown-placement-bottomRight  ant-dropdown-hidden"
  >
    <div
      class="ant-table-filter-dropdown"
    >
      <div
        class="custom-filter-dropdown"
      >
        custom filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon correctly 1`] = `
<span
  class="ant-table-filter-icon ant-table-filter-selected ant-dropdown-trigger"
  style=""
  title="Filter menu"
>
  filtered
</span>
`;

exports[`Table.filter renders custom filter icon correctly 2`] = `
<span
  class="ant-table-filter-icon ant-dropdown-trigger"
  style=""
  title="Filter menu"
>
  unfiltered
</span>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="ant-table-wrapper"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-table ant-table-default ant-table-scroll-position-left"
      >
        <div
          class="ant-table-content"
        >
          <div
            class="ant-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
              </colgroup>
              <thead
                class="ant-table-thead"
              >
                <tr>
                  <th
                    class="ant-table-column-has-actions ant-table-column-has-filters"
                  >
                    <div>
                      Name
                    </div>
                    <i
                      aria-label="icon: filter"
                      class="anticon anticon-filter ant-dropdown-trigger"
                      tabindex="-1"
                      title="Filter menu"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        width="1em"
                      >
                        <use
                          href="#filter"
                        />
                      </svg>
                    </i>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ant-table-tbody"
              >
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="ant-table-column-has-actions ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jack
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="ant-table-column-has-actions ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Lucy
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="ant-table-column-has-actions ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Tom
                  </td>
                </tr>
                <tr
                  class="ant-table-row ant-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="ant-table-column-has-actions ant-table-column-has-filters"
                  >
                    <span
                      class="ant-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div
    class="ant-dropdown  ant-dropdown-placement-bottomRight  ant-dropdown-hidden"
  >
    <div
      class="ant-table-filter-dropdown"
    >
      <ul
        class="ant-dropdown-menu  ant-dropdown-menu-root ant-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="ant-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="ant-table-filter-dropdown-btns"
      >
        <a
          class="ant-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="ant-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div
    class="ant-dropdown  ant-dropdown-placement-bottomRight  ant-dropdown-hidden"
  >
    <div
      class="ant-table-filter-dropdown"
    >
      <ul
        class="ant-dropdown-menu  ant-dropdown-menu-root ant-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-radio-wrapper"
          >
            <span
              class="ant-radio"
            >
              <input
                class="ant-radio-input"
                type="radio"
              />
              <span
                class="ant-radio-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="ant-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="ant-radio-wrapper"
          >
            <span
              class="ant-radio"
            >
              <input
                class="ant-radio-input"
                type="radio"
              />
              <span
                class="ant-radio-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="ant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="ant-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="ant-table-filter-dropdown-btns"
      >
        <a
          class="ant-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="ant-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;
